lib_LTLIBRARIES = libapplication_epidemic.la libradio_sic.la

libapplication_epidemic_la_CFLAGS = $(CFLAGS) $(GLIB_FLAGS) -Wall

libapplication_epidemic_la_SOURCES = epidemic.c

libapplication_epidemic_la_LDFLAGS = -module

libradio_sic_la_CFLAGS = $(CFLAGS) $(GLIB_FLAGS) -Wall

libradio_sic_la_SOURCES = sic.c

libradio_sic_la_LDFLAGS = -module