lib_LTLIBRARIES = libapplication_sic.la libradio_sic.la libmac_sic.la librouting_sic.la

libapplication_sic_la_CFLAGS = $(CFLAGS) $(GLIB_FLAGS) -Wall

libapplication_sic_la_SOURCES = sic_priority_application.c

libapplication_sic_la_LDFLAGS = -module

libradio_sic_la_CFLAGS = $(CFLAGS) $(GLIB_FLAGS) -Wall

libradio_sic_la_SOURCES = sic.c

libradio_sic_la_LDFLAGS = -module

libmac_sic_la_CFLAGS = $(CFLAGS) $(GLIB_FLAGS) -Wall

libmac_sic_la_SOURCES = sic_priority_mac.c

libmac_sic_la_LDFLAGS = -module

librouting_sic_la_CFLAGS = $(CFLAGS) $(GLIB_FLAGS) -Wall

librouting_sic_la_SOURCES = sic_priority_routing.c

librouting_sic_la_LDFLAGS = -module